--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.1",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "json-server": "^1.0.0-alpha.23",
     "uuid": "^9.0.1"
